--- a/GiFML/app/views/mosaics/index.html.erb
+++ b/GiFML/app/views/mosaics/index.html.erb
@@ -3,16 +3,41 @@
   <h3>-your life in gif form-</h3>
 </div>
 
+<% if user_signed_in? %>
+  <button id='sign-in'>
+  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+  </button>
+<% else %>
+  <button id='sign-in'>
+  <%= link_to('Login', new_user_session_path)  %>
+  </button>
+<% end %>
+
 <div id="user-input">
   <label id="question"></label>
-  <input type="search" class="search-keyword" id="search-keyword">
-  <button id="name-button" type="button">GiFML</button>
+  <form>
+    <input type="text" class="search-keyword" id="search-keyword">
+    <input type="submit" id="search-button" value="GiFML">
+  </form>
 </div>
 
-<div id="gif-box">
+<button id="save-button" type="button">Save My Gifs</button>
+<button id="reset-button" type="button">Reset</button>
+
+<div id="gif-box1">
   <div class="containers" id="container-0"></div>
   <div class="containers" id="container-1"></div>
   <div class="containers" id="container-2"></div>
 </div>
 
-<%= javascript_include_tag "application" %>
+<div id="gif-box2">
+  <div class="containers" id="container-3"></div>
+  <div class="containers" id="container-4"></div>
+  <div class="containers" id="container-5"></div>
+</div>
+
+<div id="gif-box3">
+  <div class="containers" id="container-6"></div>
+  <div class="containers" id="container-7"></div>
+  <div class="containers" id="container-8"></div>
+</div>
